# rknpu2

examples/rknn_api_demo/: CMakeLists.txt  README.md  build-android.sh  build-linux.sh
examples/rknn_cam_demo/: CMakeLists.txt  README.md  build-linux.sh
examples/rknn_cam_demo/src/: main.cc
examples/rknn_common_test/: CMakeLists.txt  README.md
examples/rknn_mobilenet_demo/: CMakeLists.txt  README.md
examples/rknn_multiple_input_demo/: CMakeLists.txt  README.md  build-android.sh
examples/rknn_ssd_demo/: CMakeLists.txt  README.md  build-android.sh
examples/rknn_yolov5_demo/: CMakeLists.txt  README.md  build-linux.sh
